--- a/Greenlight/Greenlight/Greenlight.csproj
+++ b/Greenlight/Greenlight/Greenlight.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{775A3860-2F8D-4307-91C1-7CF12D90B13B}</ProjectGuid>
+    <ProjectGuid>{BDBB0ABA-A697-4354-A5C7-DD7F50AEC5A2}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -169,24 +169,34 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201603082343202_InitialCreate.cs" />
-    <Compile Include="Migrations\201603082343202_InitialCreate.Designer.cs">
-      <DependentUpon>201603082343202_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201603091950239_initial.cs" />
+    <Compile Include="Migrations\201603091950239_initial.Designer.cs">
+      <DependentUpon>201603091950239_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603092116336_updatefields.cs" />
+    <Compile Include="Migrations\201603092116336_updatefields.Designer.cs">
+      <DependentUpon>201603092116336_updatefields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603092159183_updateGame.cs" />
+    <Compile Include="Migrations\201603092159183_updateGame.Designer.cs">
+      <DependentUpon>201603092159183_updateGame.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Developer.cs" />
-    <Compile Include="Models\File.cs" />
-    <Compile Include="Models\FileType.cs" />
     <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\GreenlightContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\RoleActions.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -199,6 +209,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\lemonade.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.2.1.js" />
@@ -228,10 +239,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
@@ -248,6 +256,13 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Games\Create.cshtml" />
+    <Content Include="Views\Games\Delete.cshtml" />
+    <Content Include="Views\Games\Details.cshtml" />
+    <Content Include="Views\Games\Edit.cshtml" />
+    <Content Include="Views\Games\Index.cshtml" />
+    <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Role\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -266,8 +281,14 @@
     <Content Include="Scripts\jquery-2.2.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201603082343202_InitialCreate.resx">
-      <DependentUpon>201603082343202_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201603091950239_initial.resx">
+      <DependentUpon>201603091950239_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603092116336_updatefields.resx">
+      <DependentUpon>201603092116336_updatefields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603092159183_updateGame.resx">
+      <DependentUpon>201603092159183_updateGame.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -286,9 +307,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>8930</DevelopmentServerPort>
+          <DevelopmentServerPort>4889</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:8930/</IISUrl>
+          <IISUrl>http://localhost:4889/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
