--- a/Greenlight/Greenlight/Greenlight.csproj
+++ b/Greenlight/Greenlight/Greenlight.csproj
@@ -192,6 +192,10 @@
     <Compile Include="Migrations\201603101758189_recloned.Designer.cs">
       <DependentUpon>201603101758189_recloned.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603101831225_updatedGame.cs" />
+    <Compile Include="Migrations\201603101831225_updatedGame.Designer.cs">
+      <DependentUpon>201603101831225_updatedGame.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Developer.cs" />
@@ -211,11 +215,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\cosmo.bootstrap.css" />
     <Content Include="DemoFile\demo1.jpg" />
-    <Content Include="DemoFile\demo2.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="GameFile\full1.jpg" />
-    <Content Include="GameFile\full2.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\lemonade.jpg" />
@@ -301,6 +303,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603101758189_recloned.resx">
       <DependentUpon>201603101758189_recloned.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603101831225_updatedGame.resx">
+      <DependentUpon>201603101831225_updatedGame.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
