--- a/Greenlight/Greenlight/Greenlight.csproj
+++ b/Greenlight/Greenlight/Greenlight.csproj
@@ -172,8 +172,8 @@
     <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
+    <Compile Include="Controllers\ShoppingCartController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -197,6 +197,14 @@
     <Compile Include="Migrations\201603101831225_updatedGame.Designer.cs">
       <DependentUpon>201603101831225_updatedGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603111738379_addingCartandOrders.cs" />
+    <Compile Include="Migrations\201603111738379_addingCartandOrders.Designer.cs">
+      <DependentUpon>201603111738379_addingCartandOrders.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603112241461_addingcart.cs" />
+    <Compile Include="Migrations\201603112241461_addingcart.Designer.cs">
+      <DependentUpon>201603112241461_addingcart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cart.cs" />
@@ -205,11 +213,15 @@
     <Compile Include="Models\GreenlightContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\RoleActions.cs" />
+    <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ShoppingCartRemoveViewModel.cs" />
+    <Compile Include="ViewModels\ShoppingCartViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -277,15 +289,12 @@
     <Content Include="Views\Games\Index.cshtml" />
     <Content Include="Views\Role\Index.cshtml" />
     <Content Include="Views\Role\Create.cshtml" />
-    <Content Include="Views\Products\Create.cshtml" />
-    <Content Include="Views\Products\Delete.cshtml" />
-    <Content Include="Views\Products\Details.cshtml" />
-    <Content Include="Views\Products\Edit.cshtml" />
-    <Content Include="Views\Products\Index.cshtml" />
+    <Content Include="Views\Games\CustomerIndex.cshtml" />
+    <Content Include="Views\Games\CustomerDetails.cshtml" />
+    <Content Include="Views\ShoppingCart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Product\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -315,6 +324,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603101831225_updatedGame.resx">
       <DependentUpon>201603101831225_updatedGame.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603111738379_addingCartandOrders.resx">
+      <DependentUpon>201603111738379_addingCartandOrders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603112241461_addingcart.resx">
+      <DependentUpon>201603112241461_addingcart.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
