--- a/Greenlight/Greenlight/Web.config
+++ b/Greenlight/Greenlight/Web.config
@@ -1,18 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=301880
-  -->
+
 <configuration>
   <configSections>
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <paypal>
+    <settings>
+      <add name="mode" value="sandbox"/>
+      <add name="connectionTimeout" value="360000"/>
+      <add name="requestRetries" value="1"/>
+      <add name="clientId" value="AeeCs15HrBdB675IpU_E64G1SG5qOYS_9rbmp5rSNQ6XvCt8FYGG_M7AbZ8MnPyIR4F3zm9DJ9rIx2WT"/>
+      <add name="clientSecret" value="ECxNa-xpx-8y_pJFV3Gw8xNywYD-rNR6PlaHgLNA8VIYNBcJkaKxYYhEMxMgp1vJtqsMGEaCvcMAuR22"/>
+    </settings>
+  </paypal>
+
+  <!-- log4net settings -->
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="my_app.log"/>
+      <appendToFile value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date
+      [%thread] %-5level %logger [%property{NDC}] %message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="FileAppender"/>
+    </root>
+  </log4net>
+
+  <appSettings>
+    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger"/>
+  </appSettings>
+
+  <system.web>
+    <trust level="High" />
+    <authentication mode="None"/>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
+  </system.web>
+  
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Greenlight;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Greenlight;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False-->
   </connectionStrings>
   <appSettings>
+    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
