--- a/Greenlight/Greenlight/packages.config
+++ b/Greenlight/Greenlight/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.2.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net452" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -28,6 +29,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PayPal" version="1.7.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
