--- a/Greenlight/Greenlight/Web.config
+++ b/Greenlight/Greenlight/Web.config
@@ -23,8 +23,7 @@
       <file value="my_app.log"/>
       <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date
-      [%thread] %-5level %logger [%property{NDC}] %message%newline"/>
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] %message%newline"/>
       </layout>
     </appender>
     <root>
@@ -32,17 +31,6 @@
       <appender-ref ref="FileAppender"/>
     </root>
   </log4net>
-
-  <appSettings>
-    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger"/>
-  </appSettings>
-
-  <system.web>
-    <trust level="High" />
-    <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
-  </system.web>
   
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Greenlight;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -54,10 +42,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <system.web>
+   <system.web>
+    <trust level="Full" />
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
     <modules>
@@ -100,15 +89,23 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
